--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ documentation = "https://docs.rs/mpi"
 readme = "README.md"
 keywords = ["message-passing", "parallel"]
 categories = ["concurrency"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.70"
 exclude = [
@@ -23,6 +23,7 @@ exclude = [
 
 [workspace]
 members = [
+  "build-probe-mpi",
   "mpi-derive",
   "mpi-sys",
 ]
@@ -31,7 +32,7 @@ members = [
 default = ["user-operations"]
 user-operations = ["libffi"]
 derive = ["mpi-derive", "memoffset"]
-complex = ["num-complex"]
+complex = ["dep:num-complex"]
 
 [dependencies]
 conv = "0.3.3"
