--- a/mpi-sys/Cargo.toml
+++ b/mpi-sys/Cargo.toml
@@ -11,9 +11,10 @@ repository = "https://github.com/rsmpi/rsmpi"
 documentation = "https://docs.rs/mpi"
 keywords = [ "message-passing", "parallel" ]
 categories = [ "external-ffi-bindings" ]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.65"
+links = "mpi"
 
 [dependencies]
 
