--- a/mpi-sys/Cargo.toml
+++ b/mpi-sys/Cargo.toml
@@ -17,7 +17,7 @@ rust-version = "1.65"
 links = "mpi"
 
 [features]
-default = "bindgen-runtime"
+default = ["bindgen-runtime"]
 bindgen-runtime = ["bindgen/runtime"]
 
 [dependencies]
