--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,17 +30,18 @@ members = [
 ]
 
 [features]
-default = ["user-operations"]
+default = ["user-operations", "bindgen-runtime"]
 user-operations = ["libffi"]
 derive = ["mpi-derive", "memoffset"]
 complex = ["dep:num-complex"]
+bindgen-runtime = ["mpi-sys/bindgen-runtime"]
 
 [dependencies]
 conv = "0.3.3"
 libffi = { version = "3.2.0", optional = true }
 memoffset = { version = "0.9", optional = true }
 mpi-derive = { path = "mpi-derive", version = "0.1.2", optional = true }
-mpi-sys = { path = "mpi-sys", version = "0.2.2" }
+mpi-sys = { path = "mpi-sys", version = "0.2.2", default-features = false }
 num-complex = { version = "0.4.5", optional = true }
 once_cell = "1.19"
 smallvec = "1.13.2"
