--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,27 +20,32 @@ jobs:
         include:
           - os: ubuntu-22.04
             rust: nightly
-            mpi_package: libmpich-dev
+            mpi_package: mpich
             cargo_flags: --all-features
             cargo_update: true
           - os: ubuntu-22.04
             rust: stable
-            mpi_package: libmpich-dev
+            mpi_package: mpich
             cargo_flags: --all-features
           - os: ubuntu-22.04
             rust: 1.70.0
-            mpi_package: libmpich-dev
+            mpi_package: mpich
             cargo_flags: --all-features
           - os: macos-latest
             rust: stable
-            mpi_package: open-mpi
+            mpi_package: openmpi
             cargo_flags: --all-features
           - os: ubuntu-latest
             rust: stable
-            mpi_package: libopenmpi-dev
+            mpi_package: openmpi
+            cargo_flags: --all-features
+          - os: windows-2022
+            rust: stable
+            mpi_package: intelmpi
             cargo_flags: --all-features
           - os: windows-2025
             rust: stable
+            mpi_package: msmpi
             cargo_flags: --features derive,complex
     steps:
       - uses: actions/checkout@v4
@@ -48,24 +53,22 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y llvm-dev libclang-dev pkgconf ${{ matrix.mpi_package }}
+          sudo apt-get install -y llvm-dev libclang-dev pkgconf
       - name: Install (MacOS)
         if: runner.os == 'macOS'
         # Workaround for intermittent failures with OMPI https://github.com/open-mpi/ompi/issues/7393
         run: |
-          brew install llvm@19 ${{ matrix.mpi_package }}
+          brew install llvm@19
           echo TMPDIR=/tmp | tee -a $GITHUB_ENV
           env
       - name: Install (Windows)
         if: runner.os == 'Windows'
         run: |
           choco install llvm --version 20.1.2 --allow-downgrade -y
-          sh ci/install-mpi-windows.sh
-          echo MSMPI_INC="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Include\\" | tee -a $GITHUB_ENV
-          echo MSMPI_LIB32="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Lib\\x86\\" | tee -a $GITHUB_ENV
-          echo MSMPI_LIB64="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Lib\\x64\\" | tee -a $GITHUB_ENV
-          echo "/c/Program Files/Microsoft MPI/Bin" | tee -a $GITHUB_PATH
-          env
+      - name: Install MPI
+        uses: mpi4py/setup-mpi@v1
+        with:
+          mpi: ${{ matrix.mpi_package }}
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{matrix.rust}}
