--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,16 +18,16 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             rust: nightly
             mpi_package: libmpich-dev
             cargo_flags: --all-features
             cargo_update: true
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             rust: stable
             mpi_package: libmpich-dev
             cargo_flags: --all-features
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             rust: 1.70.0
             mpi_package: libmpich-dev
             cargo_flags: --all-features
@@ -39,7 +39,7 @@ jobs:
             rust: stable
             mpi_package: libopenmpi-dev
             cargo_flags: --all-features
-          - os: windows-2022
+          - os: windows-2025
             rust: stable
             cargo_flags: --features derive,complex
     steps:
@@ -53,13 +53,13 @@ jobs:
         if: runner.os == 'macOS'
         # Workaround for intermittent failures with OMPI https://github.com/open-mpi/ompi/issues/7393
         run: |
-          brew install llvm@13 ${{ matrix.mpi_package }}
+          brew install llvm@19 ${{ matrix.mpi_package }}
           echo TMPDIR=/tmp | tee -a $GITHUB_ENV
           env
       - name: Install (Windows)
         if: runner.os == 'Windows'
         run: |
-          choco install llvm --version 16.0.6 --allow-downgrade -y
+          choco install llvm --version 20.1.2 --allow-downgrade -y
           sh ci/install-mpi-windows.sh
           echo MSMPI_INC="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Include\\" | tee -a $GITHUB_ENV
           echo MSMPI_LIB32="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Lib\\x86\\" | tee -a $GITHUB_ENV
