--- a/mpi-sys/Cargo.toml
+++ b/mpi-sys/Cargo.toml
@@ -19,8 +19,8 @@ links = "mpi"
 [dependencies]
 
 [build-dependencies]
-cc = "1.0.90"
-bindgen = "0.69"
+cc = "1.2.26"
+bindgen = { version = "0.70.1" }
 build-probe-mpi = { path = "../build-probe-mpi", version = "0.1.4" }
 
 [package.metadata.release]
