bindgen: disable default features (notably "runtime")
This appears to work out of the box on ordinary systems, but for
homebrew-installed llvm, it requires setting DYLD_LIBRARY_PATH, such as:

export DYLD_LIBRARY_PATH=$(/opt/homebrew/opt/llvm@19/bin/llvm-config --libdir)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,6 +55,8 @@ jobs:
         run: |
           brew install llvm@19 ${{ matrix.mpi_package }}
           echo TMPDIR=/tmp | tee -a $GITHUB_ENV
+          echo PATH="/opt/homebrew/opt/llvm@19/bin:$PATH" | tee -a $GITHUB_ENV
+          echo DYLD_LIBRARY_PATH=$(/opt/homebrew/opt/llvm@19/bin/llvm-config --libdir) | tee -a $GITHUB_ENV
           env
       - name: Install (Windows)
         if: runner.os == 'Windows'
