--- a/derive-test/Cargo.toml
+++ b/derive-test/Cargo.toml
@@ -2,6 +2,7 @@
 name = "derive-test"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
-rsmpi = { package = "mpi", version = "0.8.0", path = "..", features = ["derive"] }
+rsmpi = { package = "mpi", version = "0.8.1", path = "..", features = ["derive"] }
